Improve code readability, fix bugs, and enhance UX/UI

--- a/docs/style/style.scss
+++ b/docs/style/style.scss
@@ -142,6 +142,8 @@ body {
             height: 100vh;
             left: 0;
             top: 0;
+            z-index: 98;
+
 
             background-color: rgba(0, 0, 0, 0.672);
             color: white;
@@ -417,16 +419,17 @@ body {
                     padding: 10px 15px;
                     border-radius: 15px;
                     border: 1px solid black;
+                    background-color: black;
+                    color: white;
                     text-align: center;
                     cursor: pointer;
                     transition: 0.3s ease-in-out;
                 }
+            }
 
-                .btnEffectHover {
-                    background-color: black;
-                    color: white;
-                    cursor: pointer;
-                }
+            .formBtnEffect {
+                background-color: #90EE90;
+                border: #90EE90 1px solid;
             }
 
             .emailSentWRapper {
@@ -753,9 +756,10 @@ body {
 
                 .form--btn {
                     position: absolute;
-                    bottom: 35px;
+                    bottom: 55px;
                     left: 6px;
                     width: 215px;
+                    transition: 0.3s ease-in-out;
                 }
             }
         }
